tests/snapshots/yaml_suite_snapshots__yaml_suite_YD5X_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 2.5. Sequence of Sequences
  from: "http://www.yaml.org/spec/1.2/spec.html#id2760351"
  tags: spec sequence
  yaml: "- [name        , hr, avg  ]\n- [Mark McGwire, 65, 0.278]\n- [Sammy Sosa  , 63, 0.288]\n"
  tree: "+STR\n +DOC\n  +SEQ\n   +SEQ []\n    =VAL :name\n    =VAL :hr\n    =VAL :avg\n   -SEQ\n   +SEQ []\n    =VAL :Mar…"
  json: "[\n  [\n    \"name\",\n    \"hr\",\n    \"avg\"\n  ],\n  [\n    \"Mark McGwire\",\n    65,\n    0.278\n  ],\n  [\n    \"Sam…"
  dump: "- - name\n  - hr\n  - avg\n- - Mark McGwire\n  - 65\n  - 0.278\n- - Sammy Sosa\n  - 63\n  - 0.288\n"
