tests/snapshots/yaml_suite_snapshots__yaml_suite_YD5X_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "- - name\n  - hr\n  - avg\n- - Mark McGwire\n  - 65\n  - 0.278\n- - Sammy Sosa\n  - 63\n  - 0.288\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2760351"
  json: "[\n  [\n    \"name\",\n    \"hr\",\n    \"avg\"\n  ],\n  [\n    \"Mark McGwire\",\n    65,\n    0.278\n  ],\n  [\n    \"Sammy Sosa\",\n    63,\n    0.288\n  ]\n]\n"
  name: Spec Example 2.5. Sequence of Sequences
  tags: spec sequence
  tree: "+STR\n +DOC\n  +SEQ\n   +SEQ []\n    =VAL :name\n    =VAL :hr\n    =VAL :avg\n   -SEQ\n   +SEQ []\n    =VAL :Mark McGwire\n    =VAL :65\n    =VAL :0.278\n   -SEQ\n   +SEQ []\n    =VAL :Sammy Sosa\n    =VAL :63\n    =VAL :0.288\n   -SEQ\n  -SEQ\n -DOC\n-STR\n"
  yaml: "- [name        , hr, avg  ]\n- [Mark McGwire, 65, 0.278]\n- [Sammy Sosa  , 63, 0.288]\n"
