tests/snapshots/yaml_suite_snapshots__yaml_suite_YJV2_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Dash in flow sequence
  from: "@ingydotnet"
  tags: flow sequence
  fail: true
  yaml: "[-]\n"
  tree: "+STR\n +DOC\n  +SEQ []\n"
