tests/snapshots/yaml_suite_snapshots__yaml_suite_YJV2_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@ingydotnet"
  name: Dash in flow sequence
  tags: flow sequence
  tree: "+STR\n +DOC\n  +SEQ []\n"
  yaml: "[-]\n"
