tests/snapshots/yaml_suite_snapshots__yaml_suite_Z67P_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: "Spec Example 8.21. Block Scalar Nodes [1.3]"
  from: "M5C3, modified for YAML 1.3"
  tags: indent spec literal folded tag local-tag 1.3-mod
  yaml: "literal: |2\n  value\nfolded: !foo >1\n value\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :literal\n   =VAL |value\\n\n   =VAL :folded\n   =VAL <!foo> >value\\n\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"literal\": \"value\\n\",\n  \"folded\": \"value\\n\"\n}\n"
  dump: "literal: |\n  value\nfolded: !foo >\n  value\n"
