tests/snapshots/yaml_suite_snapshots__yaml_suite_Z9M4_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 6.22. Global Tag Prefix
  from: "http://www.yaml.org/spec/1.2/spec.html#id2783726"
  tags: spec header tag unknown-tag
  yaml: "%TAG !e! tag:example.com,2000:app/\n---\n- !e!foo \"bar\"\n"
  tree: "+STR\n +DOC ---\n  +SEQ\n   =VAL <tag:example.com,2000:app/foo> \"bar\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  \"bar\"\n]\n"
  dump: "---\n- !<tag:example.com,2000:app/foo> \"bar\"\n"
