tests/snapshots/yaml_suite_snapshots__yaml_suite_Z9M4_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\n- !<tag:example.com,2000:app/foo> \"bar\"\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2783726"
  json: "[\n  \"bar\"\n]\n"
  name: Spec Example 6.22. Global Tag Prefix
  tags: spec header tag unknown-tag
  tree: "+STR\n +DOC ---\n  +SEQ\n   =VAL <tag:example.com,2000:app/foo> \"bar\n  -SEQ\n -DOC\n-STR\n"
  yaml: "%TAG !e! tag:example.com,2000:app/\n---\n- !e!foo \"bar\"\n"
