tests/snapshots/yaml_suite_snapshots__yaml_suite_ZCZ6_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Invalid mapping in plain single line value
  from: "https://gist.github.com/anonymous/0c8db51d151baf8113205ba3ce71d1b4 via @ingydotnet"
  tags: error mapping scalar
  fail: true
  yaml: "a: b: c: d\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :a\n"
